added delete, update, getById endpoints, changed int to Long id (#2)
* added delete, update, getById endpoints, changed int to Long id

* fixed test

* use mapstruct in mapper

* add validation if order exists before operation, use long id in controller

---------

Co-authored-by: Jakub Wykocki <527174@genpt.net>