@@ -4,7 +4,7 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.ext.ExceptionMapper;
 import jakarta.ws.rs.ext.Provider;
-import java.util.List;
+import java.util.Collections;
 
 @Provider
 public class GlobalExceptionHandler implements ExceptionMapper<Throwable> {
@@ -13,6 +13,8 @@ public class GlobalExceptionHandler implements ExceptionMapper<Throwable> {
     public Response toResponse(Throwable exception) {
         if (exception instanceof InvalidOrderRequestException) {
             return handleInvalidOrderRequestException((InvalidOrderRequestException) exception);
+        } else if (exception instanceof OrderNotFoundException) {
+            return handleOrderNotFoundException((OrderNotFoundException) exception);
         } else {
             return handleGenericException(exception);
         }
@@ -25,9 +27,17 @@ public class GlobalExceptionHandler implements ExceptionMapper<Throwable> {
                 .build();
     }
 
+    private Response handleOrderNotFoundException(OrderNotFoundException exception) {
+        return Response.status(Response.Status.NOT_FOUND)
+                .entity(new ErrorResponse(exception.getMessage(), Collections.emptyList()))
+                .type(MediaType.APPLICATION_JSON)
+                .build();
+    }
+
     private Response handleGenericException(Throwable exception) {
+        exception.printStackTrace();
         return Response.status(Response.Status.BAD_REQUEST)
-                .entity(new ErrorResponse(exception.getMessage(), List.of(exception.getMessage())))
+                .entity(new ErrorResponse("An error occurred", Collections.emptyList()))
                 .type(MediaType.APPLICATION_JSON)
                 .build();
     }
